(*) Completed Spinner RPM tab.
(*) Performance improvement of Timing Windows chart by using predefined series.
(*) Fixed display of Beatmap Info tab.
(*) Display hitobjects count in Beatmap Info tab.
(*) Added legend to Timing Window chart.

--- a/o!RA/ToDo.txt
+++ b/o!RA/ToDo.txt
@@ -1,1 +1,5 @@
-﻿(TimingWindows) - Calculate average deviation
+﻿Ideas:
+	(*) Distance from center of circle
+	(*) Acc per % of song
+	(*) Cursor tracer
+	(*) Compare replays
