--- a/TWChartPlugin/Properties/Resources.resx
+++ b/TWChartPlugin/Properties/Resources.resx
@@ -118,13 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="enUSFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\enUSFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TimingGraph_H" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TimingGraph_H.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Menu_H" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Menu_H.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Menu_N" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Menu_N.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="TimingGraph_N" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TimingGraph_N.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
