--- a/o!RAResources/Properties/Resources.resx
+++ b/o!RAResources/Properties/Resources.resx
@@ -142,4 +142,25 @@
   <data name="Menu_N" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Menu_N.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="default_followpoint" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\default_followpoint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="default_hitcircle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\default_hitcircle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="default_hitcircleoverlay" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\default_hitcircleoverlay.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Player_End" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Player_End.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Player_Pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Player_Pause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Player_Play" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Player_Play.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Player_Start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Player_Start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
