--- a/o!RAResources/Properties/Resources.resx
+++ b/o!RAResources/Properties/Resources.resx
@@ -163,4 +163,7 @@
   <data name="Player_Start" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Player_Start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="default_approachcircle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\default_approachcircle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
